[gd_scene load_steps=20 format=3 uid="uid://bong6vuj8mm7d"]

[ext_resource type="Script" path="res://main.gd" id="1_fnaa1"]
[ext_resource type="PackedScene" uid="uid://20eaviirngd3" path="res://resource_template.tscn" id="2_trenu"]
[ext_resource type="PackedScene" uid="uid://ccn33bgi1kcco" path="res://assets/models/world river.glb" id="3_sp2be"]
[ext_resource type="Texture2D" uid="uid://bequx18jhwbq8" path="res://assets/icons/policy.aseprite" id="4_dfdm5"]
[ext_resource type="Texture2D" uid="uid://cnyfyx6sohe1a" path="res://assets/icons/event.aseprite" id="5_16106"]
[ext_resource type="Texture2D" uid="uid://kdaprjxsevtm" path="res://assets/icons/event2.aseprite" id="6_g70l5"]
[ext_resource type="Texture2D" uid="uid://bk4tp60qfkfxn" path="res://assets/icons/event3.aseprite" id="7_iedwv"]
[ext_resource type="Theme" uid="uid://dtj8wbgshg2m3" path="res://master_theme.tres" id="8_am3pr"]
[ext_resource type="Texture2D" uid="uid://c1noamuuutq6a" path="res://assets/icons/clock.aseprite" id="9_nqq7j"]
[ext_resource type="Texture2D" uid="uid://duakl2jtj2xoc" path="res://assets/icons/roboticon.aseprite" id="10_w616g"]
[ext_resource type="Theme" uid="uid://bvuglxq615n6e" path="res://text.tres" id="11_8jok1"]
[ext_resource type="Texture2D" uid="uid://c62x7qj76t2v5" path="res://assets/icons/water.aseprite" id="12_w8v7l"]
[ext_resource type="Texture2D" uid="uid://capobw7vuerj5" path="res://assets/icons/ampear.aseprite" id="13_3520b"]
[ext_resource type="Texture2D" uid="uid://cyoai8edosgmw" path="res://assets/icons/metal.aseprite" id="14_d380e"]
[ext_resource type="Texture2D" uid="uid://c3bipqa1qhhba" path="res://assets/icons/mountain.aseprite" id="15_64rhx"]
[ext_resource type="Texture2D" uid="uid://rxe5cdgh6cmq" path="res://assets/icons/eventcard.aseprite" id="16_mq63n"]
[ext_resource type="Texture2D" uid="uid://md4cga14rla6" path="res://assets/icons/eventbutton.aseprite" id="17_skk7t"]
[ext_resource type="PackedScene" uid="uid://b3bdwxvpmu30l" path="res://assets/sprites/robot.aseprite" id="18_0e7r0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ggkm3"]
bg_color = Color(0, 0.631373, 0.976471, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_fnaa1")

[node name="Resource Template" parent="." instance=ExtResource("2_trenu")]

[node name="world river" parent="." instance=ExtResource("3_sp2be")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.938095, 0.346379, 0, -0.346379, 0.938095, 0.00268662, 1.99665, 1.63451)
fov = 62.7476

[node name="OmniLight3D" type="OmniLight3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0269732, 1.38387, -1.19976)
light_color = Color(0.976471, 0.992157, 0.972549, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChoicesContainer" type="PanelContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/ChoicesContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VFlowContainer" type="VFlowContainer" parent="CanvasLayer/HBoxContainer/ChoicesContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 15

[node name="PolicyIcon" type="TextureRect" parent="CanvasLayer/HBoxContainer/ChoicesContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
texture = ExtResource("4_dfdm5")

[node name="EventIcon1" type="TextureRect" parent="CanvasLayer/HBoxContainer/ChoicesContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
texture = ExtResource("5_16106")

[node name="EventIcon2" type="TextureRect" parent="CanvasLayer/HBoxContainer/ChoicesContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
texture = ExtResource("6_g70l5")

[node name="EventIcon3" type="TextureRect" parent="CanvasLayer/HBoxContainer/ChoicesContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
texture = ExtResource("7_iedwv")

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("8_am3pr")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/HBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
text = "Lorem ipsum dolor sit amet"
fit_content = true
scroll_following = true

[node name="Clock" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("9_nqq7j")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("8_am3pr")
theme_override_styles/fill = SubResource("StyleBoxFlat_ggkm3")
rounded = true

[node name="VFlowContainer" type="VFlowContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("8_am3pr")

[node name="ResourceContainer" type="PanelContainer" parent="CanvasLayer/HBoxContainer/VFlowContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VFlowContainer" type="VFlowContainer" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 0

[node name="BotsUIGrid" type="GridContainer" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 0

[node name="BotsIcon" type="TextureRect" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer/MarginContainer/VFlowContainer/BotsUIGrid"]
layout_mode = 2
texture = ExtResource("10_w616g")
stretch_mode = 3

[node name="BotsLabel" type="Label" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer/MarginContainer/VFlowContainer/BotsUIGrid"]
layout_mode = 2
theme = ExtResource("11_8jok1")
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="WaterUIGrid" type="GridContainer" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 0

[node name="WaterIcon" type="TextureRect" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer/MarginContainer/VFlowContainer/WaterUIGrid"]
layout_mode = 2
texture = ExtResource("12_w8v7l")
stretch_mode = 3

[node name="PollutionLabel" type="Label" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer/MarginContainer/VFlowContainer/WaterUIGrid"]
layout_mode = 2
theme = ExtResource("11_8jok1")
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AmpearUIGrid" type="GridContainer" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 0

[node name="AmpearIcon" type="TextureRect" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer/MarginContainer/VFlowContainer/AmpearUIGrid"]
layout_mode = 2
texture = ExtResource("13_3520b")

[node name="AmpearLabel" type="Label" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer/MarginContainer/VFlowContainer/AmpearUIGrid"]
layout_mode = 2
theme = ExtResource("11_8jok1")
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MetalUIGrid" type="GridContainer" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 0

[node name="MetalIcon" type="TextureRect" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer/MarginContainer/VFlowContainer/MetalUIGrid"]
layout_mode = 2
texture = ExtResource("14_d380e")

[node name="MetalLabel" type="Label" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer/MarginContainer/VFlowContainer/MetalUIGrid"]
layout_mode = 2
theme = ExtResource("11_8jok1")
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MountainUIGrid" type="GridContainer" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer/MarginContainer/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 0

[node name="MountainIcon" type="TextureRect" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer/MarginContainer/VFlowContainer/MountainUIGrid"]
layout_mode = 2
texture = ExtResource("15_64rhx")

[node name="MountainLabel" type="Label" parent="CanvasLayer/HBoxContainer/VFlowContainer/ResourceContainer/MarginContainer/VFlowContainer/MountainUIGrid"]
layout_mode = 2
theme = ExtResource("11_8jok1")
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -918.0
offset_top = -824.0
offset_right = 918.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EventBackground" type="TextureRect" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
texture = ExtResource("16_mq63n")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/CenterContainer/EventBackground"]
layout_mode = 0
offset_right = 917.0
offset_bottom = 425.0

[node name="VSplitContainer" type="VSplitContainer" parent="CanvasLayer/CenterContainer/EventBackground"]
layout_mode = 0
offset_left = 385.0
offset_top = 448.0
offset_right = 1269.0
offset_bottom = 683.0
theme_override_constants/separation = 20

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/CenterContainer/EventBackground/VSplitContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/CenterContainer/EventBackground/VSplitContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 6
texture_normal = ExtResource("17_skk7t")

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/CenterContainer/EventBackground/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/CenterContainer/EventBackground/VSplitContainer/CenterContainer2"]
layout_mode = 2
size_flags_horizontal = 6
texture_normal = ExtResource("17_skk7t")

[node name="robot" parent="." instance=ExtResource("18_0e7r0")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.487064, 1.168, 0.763777)
autoplay = "default"

[node name="robot1" parent="." instance=ExtResource("18_0e7r0")]
transform = Transform3D(0.05, 0, 0, 0, 0.0496951, 0.0055136, 0, -0.0055136, 0.0496951, 0.572062, 1.172, 0.886256)
autoplay = "default"
