[gd_scene load_steps=6 format=3 uid="uid://brfkqg5dbsuq"]

[ext_resource type="Script" path="res://main.gd" id="1_8spcv"]
[ext_resource type="PackedScene" uid="uid://20eaviirngd3" path="res://resource_template.tscn" id="2_t8dhn"]
[ext_resource type="Texture2D" uid="uid://cb0sqq3e85u0q" path="res://assets/sprites/test sprite.aseprite" id="4_8udjc"]
[ext_resource type="PackedScene" uid="uid://ccn33bgi1kcco" path="res://assets/models/world river.glb" id="4_lrj47"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_b1rt8"]

[node name="Main" type="Node2D"]
script = ExtResource("1_8spcv")

[node name="Resource Template" parent="." instance=ExtResource("2_t8dhn")]

[node name="world river" parent="." instance=ExtResource("4_lrj47")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.886825, 0.462105, 0, -0.462105, 0.886825, 0.00268662, 2.0586, 1.57783)
fov = 62.7476

[node name="OmniLight3D" type="OmniLight3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.54065, -0.35192)
light_color = Color(0.976471, 0.992157, 0.972549, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Top Bar" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(960.5, 55.5)
scale = Vector2(60.0313, 3.46875)
texture = ExtResource("4_8udjc")

[node name="SeasonTracker" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(973, 115)
scale = Vector2(6.23437, 6.10938)
texture = ExtResource("4_8udjc")

[node name="WaterIcon" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1557, 36)
scale = Vector2(50, 50)
texture = SubResource("PlaceholderTexture2D_b1rt8")

[node name="AmpearIcon" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1626, 36)
scale = Vector2(50, 50)
texture = SubResource("PlaceholderTexture2D_b1rt8")

[node name="MetalIcon" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1695, 36)
scale = Vector2(50, 50)
texture = SubResource("PlaceholderTexture2D_b1rt8")

[node name="BotsIcon" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1764, 36)
scale = Vector2(50, 50)
texture = SubResource("PlaceholderTexture2D_b1rt8")

[node name="MountainIcon" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1833, 36)
scale = Vector2(50, 50)
texture = SubResource("PlaceholderTexture2D_b1rt8")

[node name="WaterTracker" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1557, 80.5)
scale = Vector2(50, 23)
texture = SubResource("PlaceholderTexture2D_b1rt8")

[node name="AmpearTracker" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1626, 80.375)
scale = Vector2(50, 22.75)
texture = SubResource("PlaceholderTexture2D_b1rt8")

[node name="MetalTracker" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1696, 80.375)
scale = Vector2(50, 22.75)
texture = SubResource("PlaceholderTexture2D_b1rt8")

[node name="BotsTracker" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1764, 80.375)
scale = Vector2(50, 22.75)
texture = SubResource("PlaceholderTexture2D_b1rt8")

[node name="MountainTracker" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1833, 80.375)
scale = Vector2(50, 22.75)
texture = SubResource("PlaceholderTexture2D_b1rt8")

[node name="CurrentEventTracker" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(622.5, 57.0625)
scale = Vector2(433, 68.125)
texture = SubResource("PlaceholderTexture2D_b1rt8")

[node name="PolicyTracker" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(57, 56)
scale = Vector2(92, 92)
texture = SubResource("PlaceholderTexture2D_b1rt8")

[node name="ChoiceTracker1" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(165, 56)
scale = Vector2(64, 64)
texture = SubResource("PlaceholderTexture2D_b1rt8")

[node name="ChoiceTracker2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(252, 56)
scale = Vector2(64, 64)
texture = SubResource("PlaceholderTexture2D_b1rt8")

[node name="ChoiceTracker3" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(338, 56)
scale = Vector2(64, 64)
texture = SubResource("PlaceholderTexture2D_b1rt8")

[node name="WaterLabel" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.798
anchor_top = 0.064
anchor_right = 0.824
anchor_bottom = 0.085
offset_left = 10.84
offset_top = -0.120003
offset_right = -11.0801
offset_bottom = 0.199997
grow_horizontal = 2
grow_vertical = 2
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AmpearLabel" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.834
anchor_top = 0.064
anchor_right = 0.86
anchor_bottom = 0.085
offset_left = 10.7198
offset_top = -0.120003
offset_right = -10.2001
offset_bottom = 0.199997
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MetalLabel" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.87
anchor_top = 0.064
anchor_right = 0.896
anchor_bottom = 0.085
offset_left = 10.5999
offset_top = -0.120003
offset_right = -11.3201
offset_bottom = 0.199997
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MetalLabel2" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.942
anchor_top = 0.064
anchor_right = 0.968
anchor_bottom = 0.085
offset_left = 10.36
offset_top = -0.120003
offset_right = -11.5601
offset_bottom = 0.199997
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BotsLabel" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.906
anchor_top = 0.064
anchor_right = 0.932
anchor_bottom = 0.085
offset_left = 10.48
offset_top = -0.120003
offset_right = -11.4401
offset_bottom = 0.199997
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
